# FinLens-Banking-Stress-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  BUILD_STATE.md  Dockerfile.streamlit  LICENSE  README.md  audit_crawl.py  docker-compose.prod.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml  ml.yml  nightly.yml  pr.yml  terraform.yml
.streamlit/: config.toml
airflow/: Dockerfile  README.md  docker-compose.yml  requirements.txt
airflow/dags/: common.py  dag_ingest_fdic.py  dag_ingest_fred.py  dag_ingest_nic.py  dag_ingest_qbp.py  dag_ml_retrain.py  dag_sync_control_plane.py  dag_transform_and_quality.py
api/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
api/models/: schemas.py
api/routers/: failures.py  metrics.py  telemetry.py
api/services/: health.py  repository.py  telemetry.py
audit/: CERTIFICATION.md  FACT_CHECK.md  UI_CEILING_SIGNOFF.md  _failrec.txt  _wiki_titles.json  feature_inventory.md  findings_frontend.md  journey.md  manifest.json  usefulness.md
audit/axe/: ai_engineering.json  analyst_assistant.json  data_engineering.json  early_warning.json  home.json
audit/e2e/: axe-scan.mjs  capture_ceiling.spec.mjs  chat_report.spec.mjs  functional_sweep.spec.mjs  playwright.config.mjs  report_open.spec.mjs  surfaces.spec.mjs  verify_batch.spec.mjs  verify_changes.spec.mjs  verify_command_center.spec.mjs  verify_diagram.spec.mjs  verify_inf.spec.mjs  verify_nav.spec.mjs  verify_panzoom.spec.mjs  verify_tip.spec.mjs  verify_v2.spec.mjs  verify_wiki.spec.mjs
audit/factcheck/: ai_engineering.md  business.md  data_engineering.md  earlywarning_home.md
audit/lighthouse/: ai_engineering.json  analyst_assistant.json  data_engineering.json  early_warning.json  home.json  wiki.json
audit/playwright/: results.xml
audit/signoffs/: accessibility.md  data-integrity.md  frontend.md  information-architecture.md  tech_data-engineering.md  tech_data-integrity.md  tech_ml-model-risk.md  ui-design.md
audit/tech/: coverage.txt  data_provenance.md  findings.md  pipeline_state.md  test_results.txt
dbt/: README.md  dbt_project.yml  packages.yml  profiles.yml  profiles.yml.example
dbt/snapshots/: dim_bank_snapshot.sql
dbt/tests/: assert_bank_quarterly_risk_facts_unique_grain.sql
deploy/: Caddyfile
deploy/k8s/: kind-config.yaml  ml-serve.yaml
docs/: PROJECT_CAPSTONES.md  README.md  architecture.md  data-flow.md  data-model.md  deployment-stack.md  index.md  operations.md  secrets.md  validation.md
docs/adr/: 0001-cloud-object-storage.md  0002-warehouse-lifecycle.md  0003-kimball-star-schema.md  0004-scd-strategy.md  0005-airflow-cosmos.md  0006-quality-split.md  0008-terraform-boundary.md  0009-vps-local-storage.md  README.md
docs/architecture/: PRODUCTION_ARCHITECTURE.md  UI_DESIGN.md
docs/ml/: ABSTRACT.md  ARCHITECTURE.md  B1_POINT_IN_TIME.md  CEILING_BACKLOG.md  COMPETING_RISKS.md  FAILURE_DECOMPOSITION.md  FINAL_SIGNOFF.md  MODEL_CARD.md  PAPER.md  PUBLICATION_READINESS.md  RELATED_WORK.md  RUN_LOCAL.md  SEQUENCE_CHALLENGER.md  VALIDATION_REPORT.md  WEB_REDESIGN.md
duckdb/: README.md  export_marts.py
duckdb/ddl/: 001_create_marts.sql
duckdb/sql/: export_marts.sql
great_expectations/: README.md  great_expectations.yml  run_checkpoint.py  validate.py  validation_result.json
great_expectations/checkpoints/: on_load.yml  on_serve.yml
great_expectations/expectations/: bank_quarterly_risk_facts.json  on_load.json  on_serve.json
ingestion/: README.md  __init__.py  fdic.py  fdic_institutions.py  fred.py  nic.py  qbp.py
ml/: Dockerfile
ml/artifacts/: b1_compare.json  booster_h4.txt  calibration_bakeoff.json  cblr_robustness.json  competing_risks.json  drift_report.json  failure_decomposition.json  fine_gray.json  finlens_model_report.html  g0_power_sim.json  (+6 more)
rag/: __init__.py  demo_answers.json  eval.py  eval_report.json  graph.py  ingest.py  trace.py
scripts/: README.md  collect_airflow_evidence.py  dump_validation.py  rotate_raw_data.py  run_dbt_build.py  run_local_pipeline.py  smoke_test.ps1  start_api.ps1  start_finlens.ps1  sync_control_plane_to_postgres.py  use_finlens_env.ps1  uv_sync.ps1
snowflake/: README.md
streamlit_app/: README.md  __init__.py  app.py  requirements.txt
terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
tests/: README.md  test_api.py  test_bootstrap.py  test_config.py  test_retention.py  test_telemetry.py  test_warehouse.py
web/: app.js  index.html  styles.css
(+214 files in other folders)
