[project]
name = "finlens"
version = "0.1.0"
description = "Regulatory-grade banking data platform."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "dbt-core>=1.10.0",
  "dbt-duckdb>=1.9.0",
  "duckdb>=1.1.3",
  "fastapi>=0.115.0",
  "mistune>=3.0.0",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "scikit-learn>=1.7.0",
  "snowflake-connector-python>=3.15.0",
  "streamlit>=1.44.0",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]
ml = [
  "lightgbm>=4.5",
  "mlflow>=3.1",
  "shap>=0.46",
  "skops>=0.11",
  "fairlearn>=0.12",
]
# evidently pins plotly<6, which is mutually exclusive with the app's plotly>=6 in a
# single resolved environment. It therefore lives in its OWN extra and is installed
# isolated (the monitoring job uses only evidently's programmatic Report API, no
# plotly rendering). Keeping it out of `ml` lets `uv sync --extra ml` resolve cleanly.
monitor = [
  "evidently>=0.7",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finlens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src", ".", "ml"]
testpaths = ["tests", "ml/tests"]
